--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">2,406</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">3,353</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.ReadAllProducts</td><td><a href="#m0">read_All_Products</a></td><td rowspan="1">1649911414009</td><td rowspan="1">2384</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">testCases.DeleteProduct</td><td><a href="#m0">create_New_Product</a></td><td rowspan="1">1650488606395</td><td rowspan="1">1943</td></tr><tr class="passedeven"><td><a href="#m1">delete_Product</a></td><td rowspan="1">1650488609040</td><td rowspan="1">351</td></tr><tr class="passedeven"><td><a href="#m2">read_All_Products</a></td><td rowspan="1">1650488608341</td><td rowspan="1">698</td></tr><tr class="passedeven"><td><a href="#m3">read_Deleted_Product</a></td><td rowspan="1">1650488609394</td><td rowspan="1">336</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testCases.ReadAllProducts#read_All_Products</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testCases.DeleteProduct#create_New_Product</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.DeleteProduct#delete_Product</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.DeleteProduct#read_All_Products</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testCases.DeleteProduct#read_Deleted_Product</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
