--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\tania\AppData\Local\Temp\testng-eclipse-622881011\testng-customsuite.xml</span>
+                    <span>C:\Users\tania\AppData\Local\Temp\testng-eclipse--791120070\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.ReadAllProducts" hash-for-method="read_All_Products">read_All_Products</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.DeleteProduct" hash-for-method="create_New_Product">create_New_Product</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.DeleteProduct" hash-for-method="delete_Product">delete_Product</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.DeleteProduct" hash-for-method="read_All_Products">read_All_Products</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.DeleteProduct" hash-for-method="read_Deleted_Product">read_Deleted_Product</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,9 +135,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.ReadAllProducts</span>
+              <span class="class-name">testCases.DeleteProduct</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="create_New_Product">
+                  </a> <!-- create_New_Product -->
+                  <span class="method-name">create_New_Product</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="delete_Product">
+                  </a> <!-- delete_Product -->
+                  <span class="method-name">delete_Product</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="read_All_Products">
@@ -130,12 +159,19 @@
                   <span class="method-name">read_All_Products</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="read_Deleted_Product">
+                  </a> <!-- read_Deleted_Product -->
+                  <span class="method-name">read_Deleted_Product</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\tania\AppData\Local\Temp\testng-eclipse-622881011\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\tania\AppData\Local\Temp\testng-eclipse--791120070\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +180,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.ReadAllProducts&quot;/&gt;
+      &lt;class name=&quot;testCases.DeleteProduct&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +220,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'read_All_Products')
-data.setCell(0, 2, 'testCases.ReadAllProducts')
-data.setCell(0, 3, 2384);
+data.setCell(0, 1, 'create_New_Product')
+data.setCell(0, 2, 'testCases.DeleteProduct')
+data.setCell(0, 3, 1943);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'read_All_Products')
+data.setCell(1, 2, 'testCases.DeleteProduct')
+data.setCell(1, 3, 698);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'delete_Product')
+data.setCell(2, 2, 'testCases.DeleteProduct')
+data.setCell(2, 3, 351);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'read_Deleted_Product')
+data.setCell(3, 2, 'testCases.DeleteProduct')
+data.setCell(3, 3, 336);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,10 +267,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.ReadAllProducts</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.DeleteProduct</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">create_New_Product</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">read_All_Products</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">1946 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">delete_Product</span>
+                <span class="method-start">2645 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">read_Deleted_Product</span>
+                <span class="method-start">2999 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
